edited some cells

--- a/crop_prediction.ipynb
+++ b/crop_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,15 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted label: [2]\n",
-      "Predicted crop: ['blackgram']\n"
+      "Predicted label: [20]\n",
+      "Predicted crop: ['rice']\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
    ],
    "source": [
     "# Reshape to a 2D array with one row\n",
-    "single_instance_features = [[56, 79, 15, 29.484400, 63.199153, 7.454532, 71.890907]]\n",
+    "single_instance_features = [[60,55,44,23.004459,82.320763,7.840207,263.964248]]\n",
     "\n",
     "# Use the StandardScaler fitted to the training data to transform the single instance\n",
     "single_instance_scaled = sc.transform(single_instance_features)\n",
